# k8s-audit-filter

./: .gitignore  README.md  audit-policy.yaml  invalid-audit-policy.yaml  makefile  pyproject.toml  requirements-dev.txt
.github/workflows/: check.yml
k8s_audit_filter/: abstract_classes.py  audit_filter.py
tests/: test_audit_data.py  test_audit_filter.py  test_fileds.py  test_rules.py
